@@ -28,10 +28,10 @@ GTK_CFLAGS = $(shell pkg-config --libs --cflags gtk+-2.0)
 all:compile i18n
 	strip -s libmrim.so
 compile:
-	${CC} ${CFLAGS} ${PURPLE_CFLAGS} ${GTK_CFLAGS} ${LDFLAGS} message.c cl.c package.c mrim.c filetransfer.c util.c -o libmrim.so
+	${CC} ${CFLAGS} ${PURPLE_CFLAGS} ${GTK_CFLAGS} ${LDFLAGS} message.c cl.c package.c mrim.c filetransfer.c mrim-util.c -o libmrim.so
 debug:
 	make clean
-	${CC} ${CFLAGS} ${DEBUG_CFLAGS} ${PURPLE_CFLAGS} ${GTK_CFLAGS} ${LDFLAGS} message.c cl.c package.c mrim.c filetransfer.c util.c -o libmrim.so
+	${CC} ${CFLAGS} ${DEBUG_CFLAGS} ${PURPLE_CFLAGS} ${GTK_CFLAGS} ${LDFLAGS} message.c cl.c package.c mrim.c filetransfer.c mrim-util.c -o libmrim.so
 	make i18n
 i18n:
 	msgfmt ${PODIR}/mrim-prpl-ru_RU.po --output-file=${PODIR}/mrim-prpl-ru_RU.mo
